--- a/styles.css
+++ b/styles.css
@@ -3,50 +3,35 @@ body {
   text-align: center;
   background-color: black;
   cursor: crosshair;
+  font-family: 'Roboto', sans-serif;
 }
+
 canvas {
   display: block;
   width: 100%;
   height: 100%;
 }
+
 .header {
-  top: 45%;
-  color: #DDDDDD;
+  top: 20%;
+  color: #FFFFFF;
+  position: absolute;
+  width: 100%;
 }
-.footer {
-  bottom: 3%;
+
+h1 {
+  font-size: 3em;
+  font-weight: 700; /* Bold weight for the main title */
+  margin: 0;
 }
-.description {
-  color: gray;
-  padding-top: 50px;
+
+h1 strong {
+  font-weight: 700; /* Ensure the strong tag uses bold weight */
 }
-.btn {
-  border-radius: 30px;
-  padding: 10px 30px;
-}
-a, a:hover, a:visited {
-  color: red;
-  text-decoration: none;
-}
-.disable-selection {
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer */
-  -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
-  -webkit-user-select: none; /* Chrome, Safari, and Opera */
-  -webkit-touch-callout: none; /* Disable Android and iOS callouts */
-}
+
 h1::after {
   content: ' V 2.0';
-  font-size: 12px;
-  position: absolute;
-  top: 3px;
-  padding-left: 5px;
-  font-weight: 400;
-}
-h2::after {
-  content: '2';
-  font-size: 12px;
-  position: absolute;
-  top: 14px;
-  padding-left: 5px;
+  font-size: 0.5em; /* Smaller size for the version text */
+  font-weight: 400; /* Normal weight for the version text */
+  margin-left: 10px;
 }
