--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   text-align: center;
   background-color: black;
   cursor: crosshair;
+  font-family: 'Roboto', sans-serif;
 }
 
 canvas {
